[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/ShootingEnemy.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="ShootingEnemy" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="ThrustParticle" type="Particles2D" parent="."]
visible = false
amount = 30
process_material = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Radar" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="RadarCollider" type="CollisionShape2D" parent="Radar"]
shape = SubResource( 3 )
[connection signal="area_entered" from="Radar" to="." method="_on_Radar_area_entered"]
[connection signal="area_exited" from="Radar" to="." method="_on_Radar_area_exited"]
